--- a/django_sso/django_sso_app/templates/django_sso_app/authentication.html
+++ b/django_sso/django_sso_app/templates/django_sso_app/authentication.html
@@ -7,11 +7,11 @@
 <body>
 <div>
     {% if user.is_authenticated %}
-    <p>Current user: ❴❴ user.email ❵❵</p>
-    <!--form action="{% url 'oidc_logout' %}" method="post">
+    <p>You are signed-in!!!</p>
+    <form action="{% url 'oidc_logout' %}" method="post">
         {% csrf_token %}
         <input type="submit" value="Logout">
-    </form-->
+    </form>
     {% else %}
     <a href="{% url 'oidc_authentication_init' %}">Login</a>
     {% endif %}
