--- a/django_sso/django_sso_app/templates/django_sso_app/authentication.html
+++ b/django_sso/django_sso_app/templates/django_sso_app/authentication.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     {% if user.is_authenticated %}
-    <p>You are signed-in!!!</p>
+    <p>You are signed-in!!! Welcome {{user.email}}</p>
     <form action="{% url 'oidc_logout' %}" method="post">
         {% csrf_token %}
         <input type="submit" value="Logout">
